--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,5 @@
 <body>
 	<div id="game"></div>
 </body>
-	<script type="module" src="script.js"></script>
+<script src="../dist/bundle.js"></script>
 </html>
